--- a/main.html
+++ b/main.html
@@ -35,7 +35,6 @@
     const captures = [];
     let model;
     const TARGET_SIZE = 224; // Размер для изменения разрешения
-    const ORIGINAL_SIZE = 1024; // Примерный исходный размер (измените на актуальный)
 
     function logInfo(message) {
       const infoElement = document.getElementById('info');
@@ -187,153 +186,160 @@
     }
 
     async function captureImage(gl, glBinding, dcamera) {
-      logInfo('Starting image capture...');
-      const texture = glBinding.getCameraImage(dcamera);
-      const width = dcamera.width;
-      const height = dcamera.height;
-
-      if (!texture) {
-        logInfo('Failed to get camera texture.');
-        return;
-      }
-
-      const scale = 1;
-      const scaledWidth = Math.floor(width * scale);
-      const scaledHeight = Math.floor(height * scale);
-      const textureBytes = scaledWidth * scaledHeight * 4;
-
-      let readbackPixels = new Uint8Array(textureBytes);
-      readbackPixels.fill(0);
-
-      let copyTexture = gl.createTexture();
-      gl.bindTexture(gl.TEXTURE_2D, copyTexture);
-      gl.texImage2D(gl.TEXTURE_2D, 0, gl.RGBA, scaledWidth, scaledHeight, 0, gl.RGBA, gl.UNSIGNED_BYTE, null);
-      gl.bindTexture(gl.TEXTURE_2D, null);
-
-      let framebuffer = gl.createFramebuffer();
-      gl.bindFramebuffer(gl.FRAMEBUFFER, framebuffer);
-      gl.framebufferTexture2D(gl.FRAMEBUFFER, gl.COLOR_ATTACHMENT0, gl.TEXTURE_2D, copyTexture, 0);
-
-      if (gl.checkFramebufferStatus(gl.FRAMEBUFFER) !== gl.FRAMEBUFFER_COMPLETE) {
-        logInfo('Framebuffer incomplete!');
-        return;
-      }
-
-      const vertexShaderSource = `
-        attribute vec4 aVertexPosition;
-        varying vec2 vTexCoord;
-        void main(void) {
-          gl_Position = aVertexPosition;
-          vTexCoord = (aVertexPosition.xy + 1.0) / 2.0;
-        }
-      `;
-      const fragmentShaderSource = `
-        precision mediump float;
-        varying vec2 vTexCoord;
-        uniform sampler2D uSampler;
-        void main(void) {
-          gl_FragColor = texture2D(uSampler, vTexCoord);
-        }
-      `;
-
-      const vertexShader = gl.createShader(gl.VERTEX_SHADER);
-      gl.shaderSource(vertexShader, vertexShaderSource);
-      gl.compileShader(vertexShader);
-      if (!gl.getShaderParameter(vertexShader, gl.COMPILE_STATUS)) {
-        logInfo('Error compiling vertex shader: ' + gl.getShaderInfoLog(vertexShader));
-        gl.deleteShader(vertexShader);
-        return;
-      }
-
-      const fragmentShader = gl.createShader(gl.FRAGMENT_SHADER);
-      gl.shaderSource(fragmentShader, fragmentShaderSource);
-      gl.compileShader(fragmentShader);
-      if (!gl.getShaderParameter(fragmentShader, gl.COMPILE_STATUS)) {
-        logInfo('Error compiling fragment shader: ' + gl.getShaderInfoLog(fragmentShader));
-        gl.deleteShader(fragmentShader);
-        return;
-      }
-
-      const program = gl.createProgram();
-      gl.attachShader(program, vertexShader);
-      gl.attachShader(program, fragmentShader);
-      gl.linkProgram(program);
-      if (!gl.getProgramParameter(program, gl.LINK_STATUS)) {
-        logInfo('Error linking program: ' + gl.getProgramInfoLog(program));
-        return;
-      }
-
-      gl.useProgram(program);
-      gl.activeTexture(gl.TEXTURE0);
-      gl.bindTexture(gl.TEXTURE_2D, texture);
-      gl.uniform1i(gl.getUniformLocation(program, 'uSampler'), 0);
-
-      const vertices = new Float32Array([
-        -1.0, -1.0,
-         1.0, -1.0,
-        -1.0,  1.0,
-         1.0,  1.0,
-      ]);
-      const positionBuffer = gl.createBuffer();
-      gl.bindBuffer(gl.ARRAY_BUFFER, positionBuffer);
-      gl.bufferData(gl.ARRAY_BUFFER, vertices, gl.STATIC_DRAW);
-      const position = gl.getAttribLocation(program, 'aVertexPosition');
-      gl.enableVertexAttribArray(position);
-      gl.vertexAttribPointer(position, 2, gl.FLOAT, false, 0, 0);
-
-      gl.viewport(0, 0, scaledWidth, scaledHeight);
-      gl.drawArrays(gl.TRIANGLE_STRIP, 0, 4);
-
-      gl.readPixels(0, 0, scaledWidth, scaledHeight, gl.RGBA, gl.UNSIGNED_BYTE, readbackPixels);
-
-      logInfo('Image captured from WebGL.');
-
-      const canvas = document.createElement('canvas');
-      canvas.width = TARGET_SIZE;
-      canvas.height = TARGET_SIZE;
-      const context = canvas.getContext('2d');
-      const imageData = new Uint8ClampedArray(readbackPixels.buffer);
-      const image = new ImageData(imageData, scaledWidth, scaledHeight);
-      context.putImageData(image, 0, 0);
-
-      // Изменение размера изображения
-      const resizedCanvas = document.createElement('canvas');
-      resizedCanvas.width = TARGET_SIZE;
-      resizedCanvas.height = TARGET_SIZE;
-      const resizedContext = resizedCanvas.getContext('2d');
-      resizedContext.drawImage(canvas, 0, 0, TARGET_SIZE, TARGET_SIZE);
-
       try {
-        logInfo('Preparing image for model prediction.');
-        const inputImage = tf.browser.fromPixels(resizedCanvas).toFloat().expandDims(0);
-        const prediction = await model.predict(inputImage).squeeze().array();
-        logInfo('Prediction completed.');
+        logInfo('Capturing image...');
 
-        const outputCanvas = document.createElement('canvas');
-        outputCanvas.width = TARGET_SIZE;
-        outputCanvas.height = TARGET_SIZE;
-        const outputContext = outputCanvas.getContext('2d');
-        const outputImageData = new ImageData(new Uint8ClampedArray(prediction[0]), TARGET_SIZE, TARGET_SIZE);
-        outputContext.putImageData(outputImageData, 0, 0);
+        const texture = glBinding.getCameraImage(dcamera);
+        if (!texture) {
+          logInfo('Failed to get camera texture');
+          return;
+        }
 
-        const dataURL = outputCanvas.toDataURL();
-        const a = document.createElement('a');
-        a.href = dataURL;
-        a.download = 'prediction.png';
-        a.click();
-        logInfo('Prediction image saved as prediction.png.');
+        const width = dcamera.width;
+        const height = dcamera.height;
 
+        const scale = 1;
+        const scaledWidth = Math.floor(width * scale);
+        const scaledHeight = Math.floor(height * scale);
+
+        let readbackPixels = new Uint8Array(scaledWidth * scaledHeight * 4);
+
+        let copyTexture = gl.createTexture();
+        gl.bindTexture(gl.TEXTURE_2D, copyTexture);
+        gl.texImage2D(gl.TEXTURE_2D, 0, gl.RGBA, scaledWidth, scaledHeight, 0, gl.RGBA, gl.UNSIGNED_BYTE, null);
+        gl.bindTexture(gl.TEXTURE_2D, null);
+
+        let framebuffer = gl.createFramebuffer();
+        gl.bindFramebuffer(gl.FRAMEBUFFER, framebuffer);
+        gl.framebufferTexture2D(gl.FRAMEBUFFER, gl.COLOR_ATTACHMENT0, gl.TEXTURE_2D, copyTexture, 0);
+
+        if (gl.checkFramebufferStatus(gl.FRAMEBUFFER) !== gl.FRAMEBUFFER_COMPLETE) {
+          logInfo('Framebuffer incomplete!');
+          return;
+        }
+
+        const vertexShaderSource = `
+          attribute vec4 aVertexPosition;
+          varying vec2 vTexCoord;
+          void main(void) {
+            gl_Position = aVertexPosition;
+            vTexCoord = (aVertexPosition.xy + 1.0) / 2.0;
+          }
+        `;
+        const fragmentShaderSource = `
+          precision mediump float;
+          varying vec2 vTexCoord;
+          uniform sampler2D uSampler;
+          void main(void) {
+            gl_FragColor = texture2D(uSampler, vTexCoord);
+          }
+        `;
+
+        const vertexShader = gl.createShader(gl.VERTEX_SHADER);
+        gl.shaderSource(vertexShader, vertexShaderSource);
+        gl.compileShader(vertexShader);
+        if (!gl.getShaderParameter(vertexShader, gl.COMPILE_STATUS)) {
+          logInfo('Error compiling vertex shader: ' + gl.getShaderInfoLog(vertexShader));
+          gl.deleteShader(vertexShader);
+          return;
+        }
+
+        const fragmentShader = gl.createShader(gl.FRAGMENT_SHADER);
+        gl.shaderSource(fragmentShader, fragmentShaderSource);
+        gl.compileShader(fragmentShader);
+        if (!gl.getShaderParameter(fragmentShader, gl.COMPILE_STATUS)) {
+          logInfo('Error compiling fragment shader: ' + gl.getShaderInfoLog(fragmentShader));
+          gl.deleteShader(fragmentShader);
+          return;
+        }
+
+        const program = gl.createProgram();
+        gl.attachShader(program, vertexShader);
+        gl.attachShader(program, fragmentShader);
+        gl.linkProgram(program);
+        if (!gl.getProgramParameter(program, gl.LINK_STATUS)) {
+          logInfo('Error linking program: ' + gl.getProgramInfoLog(program));
+          return;
+        }
+
+        gl.useProgram(program);
+        gl.activeTexture(gl.TEXTURE0);
+        gl.bindTexture(gl.TEXTURE_2D, texture);
+        gl.uniform1i(gl.getUniformLocation(program, 'uSampler'), 0);
+
+        const vertices = new Float32Array([
+          -1.0, -1.0,
+           1.0, -1.0,
+          -1.0,  1.0,
+           1.0,  1.0,
+        ]);
+        const positionBuffer = gl.createBuffer();
+        gl.bindBuffer(gl.ARRAY_BUFFER, positionBuffer);
+        gl.bufferData(gl.ARRAY_BUFFER, vertices, gl.STATIC_DRAW);
+        const position = gl.getAttribLocation(program, 'aVertexPosition');
+        gl.enableVertexAttribArray(position);
+        gl.vertexAttribPointer(position, 2, gl.FLOAT, false, 0, 0);
+
+        gl.viewport(0, 0, scaledWidth, scaledHeight);
+        gl.drawArrays(gl.TRIANGLE_STRIP, 0, 4);
+
+        gl.readPixels(0, 0, scaledWidth, scaledHeight, gl.RGBA, gl.UNSIGNED_BYTE, readbackPixels);
+
+        logInfo('Image captured from WebGL.');
+
+        const canvas = document.createElement('canvas');
+        canvas.width = scaledWidth;
+        canvas.height = scaledHeight;
+        const context = canvas.getContext('2d');
+        const imageData = new ImageData(new Uint8ClampedArray(readbackPixels), scaledWidth, scaledHeight);
+        context.putImageData(imageData, 0, 0);
+
+        const resizedCanvas = document.createElement('canvas');
+        resizedCanvas.width = TARGET_SIZE;
+        resizedCanvas.height = TARGET_SIZE;
+        const resizedContext = resizedCanvas.getContext('2d');
+        resizedContext.drawImage(canvas, 0, 0, TARGET_SIZE, TARGET_SIZE);
+
+        try {
+          logInfo('Preparing image for model prediction.');
+          const inputImage = tf.browser.fromPixels(resizedCanvas).toFloat().expandDims(0);
+          const prediction = await model.predict(inputImage).squeeze().array();
+          logInfo('Prediction completed.');
+
+          const outputCanvas = document.createElement('canvas');
+          outputCanvas.width = TARGET_SIZE;
+          outputCanvas.height = TARGET_SIZE;
+          const outputContext = outputCanvas.getContext('2d');
+          const predictionData = new Float32Array(prediction[0]);
+
+          if (predictionData.length === TARGET_SIZE * TARGET_SIZE) {
+            const outputImageData = new ImageData(new Uint8ClampedArray(predictionData), TARGET_SIZE, TARGET_SIZE);
+            outputContext.putImageData(outputImageData, 0, 0);
+
+            const dataURL = outputCanvas.toDataURL();
+            const a = document.createElement('a');
+            a.href = dataURL;
+            a.download = 'prediction.png';
+            a.click();
+            logInfo('Prediction image saved as prediction.png.');
+          } else {
+            logInfo('Prediction data length does not match expected size.');
+          }
+
+        } catch (error) {
+          logInfo('Error during model prediction: ' + error.message);
+        } finally {
+          gl.bindFramebuffer(gl.FRAMEBUFFER, null);
+          gl.deleteFramebuffer(framebuffer);
+          gl.deleteTexture(copyTexture);
+          gl.deleteProgram(program);
+          gl.deleteShader(vertexShader);
+          gl.deleteShader(fragmentShader);
+          gl.deleteBuffer(positionBuffer);
+          logInfo('Cleaned up resources after image capture.');
+        }
       } catch (error) {
-        logInfo('Error during model prediction: ' + error.message);
-      } finally {
-        gl.bindFramebuffer(gl.FRAMEBUFFER, null);
-        gl.deleteFramebuffer(framebuffer);
-        gl.deleteTexture(copyTexture);
-        gl.deleteProgram(program);
-        gl.deleteShader(vertexShader);
-        gl.deleteShader(fragmentShader);
-        gl.deleteBuffer(positionBuffer);
-        logInfo('Cleaned up resources after image capture.');
+        logInfo('Error during image capture: ' + error.message);
       }
     }
 
